# objective

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  check-poetry-version.sh  conftest.py  pre-commit-check-poetry.sh  pyproject.toml
.github/workflows/: docker-build.yml  mypy.yml  pytest.yml  tests.yml
alembic/: env.py
alembic/versions/: 2023-10-22-18-04_b1a1c4aa4122.py  2024_09_02_1802-fe157e9d1c30_add_timezones.py  2024_09_09_1451-92b97ae79e17_rename_user_id_to_created_by_id.py  2024_09_30_1023-d1ce0fb7ac9a_add_elements_table.py  2024_11_11_1147-65a67fe53de9_migrate_elements_data.py  2024_11_11_1149-2a04a94dceec_remove_elements_col.py  2024_11_20_1624-4dff8c1ba9a2_scene_elements_nullable.py  2024_12_10_1028-9f4b00d323be_migrate_file_ids.py  2025_02_09_1558-d0101d50d313_add_file_to_scene_table.py  2025_02_26_1629-7734c456d1a5_add_entity_access.py
app/: client.py  config.py  exceptions.py  main.py
app/api/: projects.py  scenes.py  users.py
app/api/v1/: routes.py
app/api/v2/: __init__.py  routes.py  users.py
app/applications/: objective.py
app/dependencies/: dependencies.py  users.py
app/repository/: repositories.py  schemas.py  users.py
app/repository/base/: base.py  sqlalchemy.py
app/repository/models/: __init__.py  base.py  models.py  scenes.py  users.py
app/schemas/: base.py  deprecated_schemas.py  schemas.py
common/: mypy.py
common/async_client/: __init__.py  _base.py  _httpx.py  _httpx_types.py
common/common/: __init__.py  _base_client_methods.py  _exceptions.py
common/config/: config.py
common/fastapi/exceptions/: __init__.py  exceptions.py
common/fastapi/monitoring/: __init__.py  base.py  sentry.py
common/fastapi/routes/: __init__.py  monitoring.py
common/logging/: logging.py
common/repo/: base.py  sqlalchemy.py
common/schemas/: base.py  constructor.py
data/scenes/: ParisTexas.objective  Sicario.objective
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf
deploy/dev/: docker-compose.yml  nginx.conf
deploy/production/: docker-compose.yml  nginx.conf
deploy/staging/: docker-compose.yml  nginx.conf
objective/: __init__.py  __main__.py  conftest.py  settings.py  utils.py
objective/common/: exceptions.py
objective/data/scenes/: Sicario.objective
objective/db/: base.py  dependencies.py  utils.py
objective/db/dao/: base.py  dummy_dao.py  projects.py  scenes.py  users.py
objective/db/migrations/: env.py
objective/db/migrations/versions/: 2023-10-03-18-48_04661a024bd5.py  2023-10-03-18-50_c26aad740747.py  2023-10-06-18-39_0dc713dd7456.py  2023-10-06-19-38_0447404d23a0.py  2023-10-22-18-04_b1a1c4aa4122.py
objective/db/models/: __init__.py  dummy_model.py  scenes.py  users.py
objective/schemas/: base.py  projects.py  scenes.py  users.py
objective/services/: __init__.py
objective/tests/: __init__.py  test_dummy.py
objective/web/: __init__.py  application.py  dependencies.py  exceptions.py  lifetime.py  router.py  sentry.py
objective/web/api/: __init__.py  router.py
objective/web/api/docs/: __init__.py
objective/web/api/dummy/: __init__.py  views.py
objective/web/api/echo/: __init__.py  views.py
objective/web/api/monitoring/: __init__.py
objective/web/api/users/: __init__.py  views.py
objective/web/routes/: monitoring.py  projects.py  router.py  scenes.py  users.py
objective/web/routes/docs/: __init__.py
objective/web/routes/monitoring/: __init__.py
objective/web/routes/users/: __init__.py  routes.py
tests/: conftest.py  conftest_data.py  helpers.py  test_schema.py  utils.py
tests/dao/: test_projects_dao.py
tests/routes/: conftest.py  test_access_rights.py  test_objective.py  test_projects.py  test_scenes.py  test_users.py
tests/routes/fixtures/: scene_update_request_body.json  scene_update_request_body_with_files.json
tests_old/: conftest.py  utils.py
tests_old/routes/: conftest.py  test_projects.py  test_scenes.py  test_users.py
