[tool.poetry]
name = "objective"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
fastapi-users = "^12.1.2"
httpx-oauth = "^0.10.2"
fastapi-users-db-sqlalchemy = "^6.0.1"
pydantic = "^2"
pydantic-settings = "^2"
ujson = "^5.8.0"
SQLAlchemy = {version = "^2.0.18", extras = ["asyncio"]}
alembic = "^1.11.1"
asyncpg = {version = "^0.28.0", extras = ["sa"]}
aiofiles = "^23.1.0"
httptools = "^0.6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "~4.0.1"
isort = "^5.11.4"
pre-commit = "^3.0.1"
black = "^22.12.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
mypy = "^1.5.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["objective",]


[tool.mypy]
python_version = 3.11
plugins = 'pydantic.mypy'
# exclude = "|venv/|migrations/|alembic/|/.venv|"
# explicit_package_bases = true
# strict_equality = true
# no_implicit_optional = false
# warn_unused_ignores = false
# warn_redundant_casts = true
# warn_unused_configs = true
# warn_unreachable = true
# warn_no_return = true
# show_error_codes = true
# pretty = true
# check_untyped_defs = true
# disallow_any_generics = false
# disallow_untyped_calls = false
# disallow_untyped_decorators = false
# ignore_errors = false
# ignore_missing_imports = true
# no_implicit_reexport = true
# strict_optional = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "PYTEST_USERS_SECRET=1234567890"
]

[tool.fastapi-template.options]
project_name = "objective"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "True"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "objective"
enable_routers = "True"
enable_kafka = "None"
enable_loguru = "None"
traefik_labels = "None"
add_dummy = "True"
orm = "sqlalchemy"
self_hosted_swagger = "True"
prometheus_enabled = "None"
sentry_enabled = "None"
otlp_enabled = "None"
pydanticv1 = "None"
gunicorn = "None"
add_users = "True"
cookie_auth = "None"
jwt_auth = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
